--- a/index.html
+++ b/index.html
@@ -11,55 +11,28 @@
 
   <body>
     <header>
-      <div id="store_name" class="border-bottom">
-        <div>
+      </div>
+      <div class="d-flex justify-content-center m-3"> 
+      <div id="collage">
+        <img src="imgs/collage.png" alt="collage" style="width:100%" />
+      </div>
+    </div>
+    </header>
+    <div id="bookstore">
+      <!--Logo-->
+      <!-- <div class="d-flex justify-content-center">  -->
+      <div id="top_bookstore" class="d-flex justify-content-center">
+        <div class="logo">
           <a href="index.html"> 
             <img src="imgs/logo2.png" alt="logo"/>
           </a>
         </div>
-        <!-- <div class="grid_item small--hide one-half text-center">
-          <h3 class="header-logo">
-            <a href="index.html">YES, BOOKS</a>
-          </h3>
-        </div> -->
-      </div>
-
-      <!-- heading-->
-      <!-- <div>
-        <b-carousel
-          id="carousel-fade"
-          style="text-shadow: 0px 0px 2px #000 height: 480 width:100%"
-          fade
-          indicators
-
-        >
-          <b-carousel-slide> 
-            <img src="imgs/header.jpeg">
-          </b-carousel-slide>
-          <b-carousel-slide> 
-            <img src="imgs/header.jpeg"/> 
-          </b-carousel-slide>
-          <b-carousel-slide>
-            <img src="imgs/header.jpeg"/> 
-          </b-carousel-slide>
-        </b-carousel>
-      </div>
-    <div> 
-      <div class="heading m-3">
-        <img src="imgs/header.jpeg" alt="tea notebook" style="width:100%" />
-        <div class="content">
-          <h1>Yes,Books </h1>
-          <p>
-            If you only read the books that everyone else is reading, you can only think what everyone else is thinking.” ― Haruki Murakami, Norwegian Wood
-          </p>
-        </div>
-      </div>-->
-    </header>
-    <div id="bookstore">
       <!--search bar-->
       <div id="search" class="d-flex justify-content-end ">
-        <label>Search here:<input class="m-5" type="text" v-model="search"/> </label>
+        <label>Search here:<input class="m-3" type="text" v-model="search"/> </label>
       </div>
+    </div>
+    <!-- </div> -->
       <!--Content-->
       <div class="d-flex flex-row justify-content-around flex-wrap">
         <div v-for="(book, index) in filteredBooks" :key="books.id">
