--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       </div>
-      <div class="d-flex justify-content-center m-4"> 
+      <div class="d-flex justify-content-center p-5"> 
       <div id="collage">
         <img src="imgs/collage.png" alt="collage" style="width:100%" />
       </div>
