--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       </div>
     </div>
     </header>
+
     <div id="bookstore">
       <!--Logo-->
-      <div class="d-flex justify-content-around"> 
+      <div class="d-flex justify-content-around align-items-center"> 
       <div id="top_bookstore" class="d-flex">
         <div class="logo">
           <a href="index.html"> 
@@ -29,8 +30,8 @@
         </div>
         </div>
       <!--search bar-->
-      <div id="search" class="d-flex align-item-end">
-        <label>Search here:<input class="m-3" type="text" v-model="search"/> </label>
+      <div id="search" class="d-flex">
+        <label style="height:0rem">Search here:<input type="text" v-model="search" /> </label>
       </div>
     </div>
       <!--Content-->
@@ -45,18 +46,18 @@
                 <h1>{{book.titulo}}</h1>
                 <p>{{book.descripcion}}</p>
                 <button type="button" class="btn btn-primary" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Más Información</button>
-                <img :src="book.detalle"/>
               </div>
             </div>
           </div>
         <div id="id01" class="modal">
-          <!-- <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span> -->
+          <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
           <div id="modal" class="modal-content">
             <img :src="book.detalle"/>
-            <!-- <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">close</button> -->
+            <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">close</button>
           </div>
         </div>
       </div>
+    </div>
     </div>
     <!--Footer-->
     <div class="row">
