--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <body>
   <header>
-    </div>
     <div class="d-flex justify-content-center p-5 border boder-bottom-dark">
       <div id="collage">
         <img src="imgs/collage.png" alt="collage" style="width:100%" />
@@ -45,50 +44,41 @@
             <div class="flip-card-back">
               <h1>{{book.titulo}}</h1>
               <p>{{book.descripcion}}</p>
-              <button type="button" class="btn btn-primary" href="#lightbox" data-toggle="modal">Más Información</a></li>
-                <!-- <button type="button" class="btn btn-primary" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Más Información</button> -->
-            </div>
+              <button type="button" class="btn btn-primary" :href="'#lightBox' + index" data-toggle="modal">Más Información</a></li>
+              </div>
           </div>
         </div>
         <div class="container">
-          <div class="modal fade and carousel slide" id="lightbox">
+          <div class="modal fade and carousel slide" :id="'lightBox' + index">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-body">
                   <ol class="carousel-indicators">
-                    <li data-target="#lightbox" data-slide-to="0" class="active"></li>
-                    <li data-target="#lightbox" data-slide-to="1"></li>
+                    <li data-slide-to="{{book.detalle}}" class="active"></li>
+                    
                   </ol>
                   <div class="carousel-inner">
                     <div class="item">
-                      <img :src="book.detalle" />
+                      <img :src="book.detalle"/>
                     </div>
                   </div>
                   <!-- /.carousel-inner -->
-                  <a class="left carousel-control" href="#lightbox" role="button" data-slide="prev">
+                  <a class="left carousel-control" :href="'#lightBox' + index"role="button" data-slide="prev">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                       </a>
-                  <a class="right carousel-control" href="#lightbox" role="button" data-slide="next">
+                  <a class="right carousel-control" :href="'#lightBox' + index" role="button" data-slide="next">
                         <span class="glyphicon glyphicon-chevron-right"></span>
                       </a>
+                       
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <!-- /.container -->
-        <!-- <div id="id01" class="modal">-->
-        <!-- <span onclick="document.getElementById('lightbox').style.display='none'" class="close" title="Close Modal">&times;</span> -->
-        <!--  <div id="modal" class="modal-content"> -->
-        <!-- <img :src="book.detalle"/>-->
-        <!-- <button type="button" onclick="document.getElementById('lightbox').style.display='none'" class="cancelbtn">close</button>  -->
-
       </div>
     </div>
-
   </div>
-  </div>
-  </div>
+ 
   <!--Footer-->
   <div class="row">
     <footer class="col-sm-12 bg-white ">
